--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="design-womhole.css">
-    <title>Document</title>
+    <title>Quote</title>
   </head>
   <body>
     <!-- credits to the writter @RAFA3L -->
